# obelisk-bot

./: .gitignore  LICENSE  README.md  artificer.ini.example  obelisk.ini.example  pyproject.toml
docs/: decisions.md  dev_notes.md  index_blurbs.md  widget_inventory.md
docs/cargo/: Artifact.md  ArtifactDef.md  ArtifactDef.wiki.txt  AstrologistEvent.md  AstrologistEventDef.md  AstrologistEventDef.wiki.txt  Building.md  BuildingDef.md  BuildingDef.wiki.txt  Difficulty.md  DifficultyDef.md  DifficultyDef.wiki.txt  Faction.md  FactionDef.md  FactionDef.wiki.txt  FactionLawTier.md  FactionLawTierDef.md  FactionLawTierDef.wiki.txt  Hero.md  HeroClass.md  HeroClassDef.md  HeroClassDef.wiki.txt  HeroDef.md  HeroDef.wiki.txt  HeroSpecialization.md  HeroSpecializationDef.md  HeroSpecializationDef.wiki.txt  HeroStartSquad.md  HeroStartSquadDef.md  HeroStartSquadDef.wiki.txt  HeroSubClass.md  HeroSubClassDef.md  HeroSubClassDef.wiki.txt  ItemSet.md  ItemSetDef.md  ItemSetDef.wiki.txt  ItemSetTier.md  ItemSetTierDef.md  ItemSetTierDef.wiki.txt  Law.md  (+65 more)
docs/cargo/shared/: AttackArchetype.md  AttackArchetypeTranslation.md  AttackPassive.md  AttackPassiveDef.md  AttackPassiveDef.wiki.txt  AttackPassiveTranslation.md  Bonus.md  BonusDef.md  BonusDef.wiki.txt  Entry.md  EntryDef.md  EntryDef.wiki.txt  Translation.md  TranslationDef.md  TranslationDef.wiki.txt
src/artificer/: __init__.py  cli.py
src/artificer/diff/: __init__.py  patch_article.py  wiki_diff.py
src/artificer/emit/: __init__.py  artifact.py  cargo.py  faction.py  hero.py  item_set.py  spell.py  unit.py
src/artificer/extract/: __init__.py  artifact.py  faction.py  hero.py  (+7 more)
src/obelisk/: __init__.py  cli.py
tests/: test_index.py  test_models_smoke.py  test_upload.py  test_wikitext.py
tools/: check_extraction.py
(+99 files in other folders)
